--- a/index.html
+++ b/index.html
@@ -2,6 +2,15 @@
 
 <html xmlns="http://www.w3.org/1999/html" xmlns="http://www.w3.org/1999/html">
 
+<head>
+    <title>Resume - Yakiv Mospan</title>
+    <meta http-equiv="Content-Type" content="text/html; charset=utf-8"/>
+    <meta name="keywords" content="mobile, android, articles, posts, tips, gists, development, java"/>
+
+    <link rel="stylesheet" type="text/css" href="assets/css/main.css">
+    <link href='http://fonts.googleapis.com/css?family=Source+Sans+Pro:300,400,300italic' rel='stylesheet' type='text/css'>
+
+</head>
 
 
 
