--- a/index.html
+++ b/index.html
@@ -13,6 +13,37 @@
 </head>
 
 
+<body>
+<div class="container">
+
+	<h1>Yakiv Mospan</h1>
+
+	<div>
+
+        <p class="date">Android Software Developer</p>
+
+        <!--Social-->
+        <div id="share-buttons" style="text-align: right">
+
+            <!-- Facebook -->
+            <a href="https://www.facebook.com/yakiv.mospan" target="_blank">
+                <img src="assets/images/social/facebook.png" alt="Facebook"/></a>
+
+            <!-- Twitter -->
+            <a href="https://twitter.com/yakivmospan" target="_blank">
+                <img src="assets/images/social/twitter.png" alt="Twitter"/></a>
+
+            <!-- Google+ -->
+            <a href="https://plus.google.com/107056158602098203841" target="_blank">
+                <img src="assets/images/social/google_plus.png" alt="Google"/></a>
+
+        </div>
+
+    </div>
+
+</div>
+</body>
+
 
 <!--Make all links open in new window start-->
 <script>
