--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
                 <img src="assets/images/social/twitter.png" alt="Twitter"/></a>
 
             <!-- Google+ -->
-            <a href="https://plus.google.com/107056158602098203841" target="_blank">
+            <a href="https://plus.google.com/+YakivMospan" target="_blank">
                 <img src="assets/images/social/google_plus.png" alt="Google"/></a>
 
         </div>
