--- a/index.html
+++ b/index.html
@@ -19,7 +19,6 @@
 	<h1>Yakiv Mospan</h1>
 
 	<div>
-
         <p class="date">Android Software Developer</p>
 
         <!--Social-->
@@ -38,8 +37,15 @@
                 <img src="assets/images/social/google_plus.png" alt="Google"/></a>
 
         </div>
+	</div>
+    
+    <hr>
 
+    <div><img class="avatar" src="/assets/images/general/avatar.png"/></div>
+    
+    <p><strong>E-Mail:</strong> yakiv.mospan [at] gmail [dot] com</p>
 
+    <p><strong>Skype:</strong> yakiv.mospan</p>
 
 </div>
 </body>
