--- a/index.html
+++ b/index.html
@@ -46,6 +46,14 @@
     <p><strong>E-Mail:</strong> yakiv.mospan [at] gmail [dot] com</p>
 
     <p><strong>Skype:</strong> yakiv.mospan</p>
+    
+      <h2>About me</h2>
+
+    <p class="intro">
+        I have loved video games since I was a child. Beautiful and creative worlds and histories, amazing animation and charismatic characters - I always wanted to create something like that. Games pushed me to become a developer.</p>
+
+    <p class="intro">
+        One day I will meet game industry but for today I’m successful Android Developer at Lemberg Solutions Limited. Love my job. Working hard to become better. And, of course, not forgetting to make some fun.</p>
 
 </div>
 </body>
